fix start and end calendar layout issue

--- a/src/pages/CreateEvent/EventForm.scss
+++ b/src/pages/CreateEvent/EventForm.scss
@@ -68,12 +68,12 @@
       width: 27%;
       padding: 0.5rem;
     }
-
-    .date-time-container,
+    
     .date-input-container {
       display: flex;
       align-items: center;
-      border: 2px solid #000;
+      border: 3px solid #000;
+      flex-direction: row;
       border-radius: 6px;
       padding: 0.5rem;
       font-size: 1rem;
@@ -86,6 +86,7 @@
         font-family: inherit;
         font-size: inherit;
         cursor: pointer;
+        border: none;
       }
 
       .divider {
